platform/devsecops/policies/gatekeeper/constraint-template-host-namespace.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spsphostnamespace
spec:
  crd:
    spec:
      names:
        kind: K8sPSPHostNamespace
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spsphostnamespace

        violation[{"msg": msg, "details": {}}] {
            input.review.object.spec.hostNetwork
            msg := "Pod must not use hostNetwork"
        }

        violation[{"msg": msg, "details": {}}] {
            input.review.object.spec.hostPID
            msg := "Pod must not use hostPID"
        }

        violation[{"msg": msg, "details": {}}] {
            input.review.object.spec.hostIPC
            msg := "Pod must not use hostIPC"
        }
